--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
+    "codemirror": "^5.21.0",
     "core-js": "^2.4.1",
     "md2": "0.0.10-2",
+    "ng2-codemirror": "^1.0.1",
     "ng2-material": "^0.8.1",
     "normalize.css": "^5.0.0",
     "rxjs": "5.0.0-beta.12",
