--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "3.2.1",
     "codemirror": "^5.21.0",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "md2": "0.0.10-2",
     "ng2-codemirror": "^1.0.1",
     "ng2-material": "^0.8.1",
