--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -15,7 +15,9 @@
       "../node_modules/@types"
     ],
     "types": [
-      "hammerjs"
+      "hammerjs",
+      "chai",
+      "mocha"
     ]
   }
 }
