--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.2.1",
+    "@types/chai": "^3.4.34",
     "@types/core-js": "^0.9.34",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "2.5.38",
+    "@types/mocha": "^2.2.33",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.21",
+    "chai": "^3.5.0",
     "codelyzer": "~1.0.0-beta.3",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
